# primitiveml

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENCE.md  Makefile  README.md  main.c  pyrightconfig.json
benchmarks/: CMakeLists.txt  gemm_benchmark.cpp
core/: .gitignore  CMakeLists.txt  exceptions.cppm  matmul.cppm  operations.cppm  pml.cppm  slice.cppm  storage.cppm  tensor.cppm  tensor_iterator.cppm
core/include/: binary_elementwise_op.hpp  container_type.h  cpu_flags.h  dynarray.h  error_handling.h  math_kernels.h  matmul.hpp  operations.hpp  reduction_op.hpp  slice.hpp  storage.hpp  tensor.h  tensor.hpp  tensor_index.h  tensor_iterator.hpp  unary_elementwise_op.hpp
core/src/: cpu_flags.S  dynarray.c  exp_avx2.S  exp_avx2_intrin.cpp  gemm.c  gemm_config.h  gemm_microkernel4x16_avx2.S  gemm_microkernel6x16_avx2.S  gemm_microkernel8x8_avx2.S  gemm_microkernel_avx2.S  gemm_microkernels_avx2.h  tensor.c  tensor.cpp  tensor_iterator.c
examples/: main.cpp
include/: conv2d.h  dynarray.h  embedding.h  error_handling.h  functional.h  gpt_modules.h  layernorm.h  linear.h  module.h  module.hpp  tensor.h
nanogpt/: gpt.ipynb
pml/include/pml/: module.hpp
pml/include/pml/core/: binary_elementwise_op.hpp  exceptions.hpp  matmul.hpp  operations.hpp  reduction_op.hpp  slice.hpp  storage.hpp  tensor.hpp  tensor_iterator.hpp  unary_elementwise_op.hpp
pml/src/: tensor.cpp
pmlcompute/: CMakeLists.txt  pml_compute.h
pmlcompute/kernels/x86_64/: exp_avx2_intrin.c  gemm_config.h
pmlcompute/ops/: gemm.c
src/: conv2d.c  dynarray.c  embedding.c  functional.c  gpt_modules.c  layernorm.c  linear.c  main.c  main.cpp  tensor.c  tensor_iterator.c
tests/: CMakeLists.txt  conftest.py  numpy_c_api.cpp  test_broadcastable.c  test_broadcastable.cpp  test_broadcasted_strides.cpp  test_dynarray.c  test_elementwise_ops.py  test_exp.py  test_gemm.cpp  test_matmul.c  test_matmul.py  test_reduction_ops.py  test_tensor.c  test_tensor_index.c  test_tensor_iterator.c
